--- a/release/fv/fv_southern_carrier/source/welcome/welcome.htm
+++ b/release/fv/fv_southern_carrier/source/welcome/welcome.htm
@@ -1,114 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ᑐᑊᘁᗕᑋᗸ</title>
 
-<style type="text/css"> <!--
-li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
-p {font-family: "Aboriginal Sans"; }
-h2 {font-family: "Aboriginal Sans"; }
-.legalese { font-size: x-small; }
-h3 {font-family: "Aboriginal Sans";}
-a:link {color: #0000ee; text-decoration:none;}
-a:visited {	color: rgb(0,150,0); text-decoration:none;} 
-a:active {	color: rgb(102,117,184); text-decoration:none;}
-kbd {
-  border-radius: 2px;
-  padding: 2px;
-  border: 1px solid black;
-}
- --> </style>
+  <style type="text/css">
+    <!--
+    li {
+      font-size: medium;
+      margin-bottom: 5px;
+      font-family: "Aboriginal Sans";
+    }
+
+    p {
+      font-family: "Aboriginal Sans";
+    }
+
+    h2 {
+      font-family: "Aboriginal Sans";
+    }
+
+    .legalese {
+      font-size: x-small;
+    }
+
+    h3 {
+      font-family: "Aboriginal Sans";
+    }
+
+    a:link {
+      color: #0000ee;
+      text-decoration: none;
+    }
+
+    a:visited {
+      color: rgb(0, 150, 0);
+      text-decoration: none;
+    }
+
+    a:active {
+      color: rgb(102, 117, 184);
+      text-decoration: none;
+    }
+
+    kbd {
+      border-radius: 2px;
+      padding: 2px;
+      border: 1px solid black;
+    }
+    -->
+  </style>
 
 </head>
+
 <body>
-<table width="100%" border="0" cellpadding="0">
-  <tr>
-    <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
-<p style='margin: 16px 0 0 0'>
-This keyboard is designed for the <b>ᑐᑊᘁᗕᑋᗸ</b> language of the BC Interior region of Canada.
-</p>
-<p>If square boxes are displayed instead of characters when using this keyboard (and in the keyboard layouts below), please read our <a href="https://help.keyman.com/troubleshooting/#boxes">troubleshooting guide</a>.
-</p>
+  <table width="100%" border="0" cellpadding="0">
+    <tr>
+      <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48"
+            border="0" /></a>
+        <p style='margin: 16px 0 0 0'>
+          This keyboard is designed for the <b>ᑐᑊᘁᗕᑋᗸ</b> language of the BC Interior region of Canada.
+        </p>
+        <p>If square boxes are displayed instead of characters when using this keyboard (and in the keyboard layouts
+          below), please read our <a href="https://help.keyman.com/troubleshooting/#boxes">troubleshooting guide</a>.
+        </p>
 
-<h2> Desktop Layout</h2>
-<h2><img src="fv_southern_carrier_U_.png" alt="ᑐᑊᘁᗕᑋᗸ" width="514" height="198" /></h2>
-<ul>
-    <li>The on-screen keyboard shows each syllable in their final form (where applicable) and in their a-orientation (consonants) or their full form (vowels).</li>
-	<li>The ᑐᑊᘁᗕᑋᗸ (Dakelh / Dulk'wah ke) keyboard is a "build-a-syllable" keyboard. The syllabics are typed phonetically by entering their Latin equivalents. The syllabics are typed by entering their Latin equivalents. See <a href="fv_SouthernCarrierGuide.pdf">this document</a> for all the special key combinations.</li>
-    <li>By typing a single consonant or a key that's assigned to a consonant, the syllable final form will appear on screen. Following the consonant with a vowel will change the syllable final into sits full form in the orientation corresponding with the vowel typed.
+        <h2> Desktop Layout</h2>
+        <h2><img src="fv_southern_carrier_U_.png" alt="ᑐᑊᘁᗕᑋᗸ" width="514" height="198" /></h2>
         <ul>
-            <li>Typing the <kbd>m</kbd> key outputs <b>ᒼ</b>. If the <kbd>a</kbd> key is typed after, it will change to <b>ᘍ</b></li>
-            <li>There are some exceptions to this. The <kbd>c</kbd>, <kbd>w</kbd>, <kbd>j</kbd> and <kbd>y</kbd> keys will output the full syllable in the a-orientation. Following the syllable with a vowel key will change it into the corresponding orientation.
+          <li>The on-screen keyboard shows each syllable in their final form (where applicable) and in their
+            a-orientation (consonants) or their full form (vowels).</li>
+          <li>The ᑐᑊᘁᗕᑋᗸ (Dakelh / Dulk'wah ke) keyboard is a "build-a-syllable" keyboard. The syllabics are typed
+            phonetically by entering their Latin equivalents. The syllabics are typed by entering their Latin
+            equivalents. See <a href="fv_SouthernCarrierGuide.pdf">this document</a> for all the special key
+            combinations.</li>
+          <li>By typing a single consonant or a key that's assigned to a consonant, the syllable final form will appear
+            on screen. Following the consonant with a vowel will change the syllable final into sits full form in the
+            orientation corresponding with the vowel typed.
+            <ul>
+              <li>Typing the <kbd>m</kbd> key outputs <b>ᒼ</b>. If the <kbd>a</kbd> key is typed after, it will change
+                to <b>ᘍ</b></li>
+              <li>There are some exceptions to this. The <kbd>c</kbd>, <kbd>w</kbd>, <kbd>j</kbd> and <kbd>y</kbd> keys
+                will output the full syllable in the a-orientation. Following the syllable with a vowel key will change
+                it into the corresponding orientation.
                 <ul>
-                    <li><b>ᙠ</b> when followed by <kbd>o</kbd> becomes <b>ᙜ</b></li>
+                  <li><b>ᙠ</b> when followed by <kbd>o</kbd> becomes <b>ᙜ</b></li>
                 </ul>
-            </li>
-             <li>To type the long o, type the <kbd>o</kbd> twice
+              </li>
+              <li>To type the long o, type the <kbd>o</kbd> twice
                 <ul>
-                    <li><b>ᘂ</b> is typed <kbd>n</kbd><kbd>o</kbd><kbd>o</kbd></li>
+                  <li><b>ᘂ</b> is typed <kbd>n</kbd><kbd>o</kbd><kbd>o</kbd></li>
                 </ul>
-            </li>
-        </ul>
-    </li>
-    <li>Some syllables are built by typing two consonants:
-        <ul>
-            <li><b>ᓑ</b> is typed <kbd>n</kbd>+<kbd>g</kbd></li>
-            <li><b>ᘭ</b> is typed <kbd>d</kbd>+<kbd>l</kbd>+<kbd>a</kbd></li>
-            <li><b>ᙍ</b> is typed <kbd>d</kbd>+<kbd>z</kbd>+<kbd>a</kbd></li>
-            <li><b>ᗉ</b> is typed <kbd>g</kbd>+<kbd>h</kbd>+<kbd>a</kbd></li>
-            <li><b>ᘳ</b> is typed <kbd>l</kbd>+<kbd>h</kbd>+<kbd>a</kbd></li>
-            <li><b>ᙙ</b> is typed <kbd>s</kbd>+<kbd>h</kbd>+<kbd>a</kbd></li>
-            <li><b>ᘹ</b> is typed <kbd>t</kbd>+<kbd>l</kbd>+<kbd>a</kbd></li>
-            <li><b>ᙦ</b> is typed <kbd>t</kbd>+<kbd>s</kbd>+<kbd>a</kbd></li>
-            <li><b>ᗛ</b> is typed <kbd>w</kbd>+<kbd>h</kbd>+<kbd>a</kbd></li>
-        </ul>
-    </li>
-    <li>Plosive sounds are typed by using the Quote Key <kbd>'</kbd> between the consonant(s) and vowel
-        <ul>
-            <li><b>ᘀ</b> is typed <kbd>k</kbd>+<kbd>'</kbd>+<kbd>a</kbd></li>
-            <li><b>ᗧ</b> is typed <kbd>t</kbd>+<kbd>'</kbd>+<kbd>a</kbd></li>
-            <li><b>ᘿ</b> is typed <kbd>t</kbd>+<kbd>l</kbd>+<kbd>'</kbd>+<kbd>a</kbd></li>
-            <li><b>ᙬ</b> is typed <kbd>t</kbd>+<kbd>s</kbd>+<kbd>'</kbd>+<kbd>a</kbd></li>
-        </ul>
-    </li>
-        
-    </ul>
-    <li> There are some exceptions, which are listed below:</li>
-    <ul>
-        <li><b>ᙠ</b> is typed "ca"</li>
-        <li><b>ᘜ</b> is typed "c'oo"</li>
-        <li><b>ᐪ</b> can be typed using <kbd>d</kbd> or <kbd>d</kbd>+<kbd>[</kbd></li>
-        <li><b>+</b> is typed <kbd>Shift</kbd>+<kbd>r</kbd></li>
-			<ul>
-                <li><b>+</b> will change to <b>r</b> when combinined with a vowel.</li>
+              </li>
             </ul>
-    </ul>
-    <li>The glottal marker <b>ᐧ</b> is typed using the <b>Semi-Colon Key</b> <kbd>;</kbd></li>
-    <li>The combined asterix <b>ᕯ</b> can be typed <kbd>Shift</kbd>+<kbd>8</kbd></li>
-  </li>
-	<li>In the case of a vowel immediately after a syllable final or two vowels that need to be side by side, use the <b>Left-Bracket Key</b> <kbd>[</kbd> to keep the syllables separate.
-    <ul>
-			<li><b>ᙐᒡᣟᐊᐉ</b> is typed <b>sulh[ai</b></li>
-      </ul>
-  </li>  
-  <li>All English letters can be typed by pressing <b>Right-Alt / Option </b> followed by the letter(s) you wish to type.</li>
-    <li>All uppercase English letters can be typed by pressing <b>Shift+Right-Alt / Option</b> followed by the letter(s) you wish to type.</li>
-</ul>
+          </li>
+          <li>Some syllables are built by typing two consonants:
+            <ul>
+              <li><b>ᓑ</b> is typed <kbd>n</kbd>+<kbd>g</kbd></li>
+              <li><b>ᘭ</b> is typed <kbd>d</kbd>+<kbd>l</kbd>+<kbd>a</kbd></li>
+              <li><b>ᙍ</b> is typed <kbd>d</kbd>+<kbd>z</kbd>+<kbd>a</kbd></li>
+              <li><b>ᗉ</b> is typed <kbd>g</kbd>+<kbd>h</kbd>+<kbd>a</kbd></li>
+              <li><b>ᘳ</b> is typed <kbd>l</kbd>+<kbd>h</kbd>+<kbd>a</kbd></li>
+              <li><b>ᙙ</b> is typed <kbd>s</kbd>+<kbd>h</kbd>+<kbd>a</kbd></li>
+              <li><b>ᘹ</b> is typed <kbd>t</kbd>+<kbd>l</kbd>+<kbd>a</kbd></li>
+              <li><b>ᙦ</b> is typed <kbd>t</kbd>+<kbd>s</kbd>+<kbd>a</kbd></li>
+              <li><b>ᗛ</b> is typed <kbd>w</kbd>+<kbd>h</kbd>+<kbd>a</kbd></li>
+            </ul>
+          </li>
+          <li>Plosive sounds are typed by using the Quote Key <kbd>'</kbd> between the consonant(s) and vowel
+            <ul>
+              <li><b>ᘀ</b> is typed <kbd>k</kbd>+<kbd>'</kbd>+<kbd>a</kbd></li>
+              <li><b>ᗧ</b> is typed <kbd>t</kbd>+<kbd>'</kbd>+<kbd>a</kbd></li>
+              <li><b>ᘿ</b> is typed <kbd>t</kbd>+<kbd>l</kbd>+<kbd>'</kbd>+<kbd>a</kbd></li>
+              <li><b>ᙬ</b> is typed <kbd>t</kbd>+<kbd>s</kbd>+<kbd>'</kbd>+<kbd>a</kbd></li>
+            </ul>
+          </li>
 
-<h2>Unicode Fonts</h2>
-						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
-    <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
-    <hr></td>
-  </tr>
-	</li>
-</ul>
-  <tr>
-    <td colspan="2"><p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’ Heritage Language and Culture Council. This keyboard is provided free of charge. </p></td>
-  </tr>
-</table>
+        </ul>
+        <li> There are some exceptions, which are listed below:</li>
+        <ul>
+          <li><b>ᙠ</b> is typed "ca"</li>
+          <li><b>ᘜ</b> is typed "c'oo"</li>
+          <li><b>ᐪ</b> can be typed using <kbd>d</kbd> or <kbd>d</kbd>+<kbd>[</kbd></li>
+          <li><b>+</b> is typed <kbd>Shift</kbd>+<kbd>r</kbd></li>
+          <ul>
+            <li><b>+</b> will change to <b>r</b> when combinined with a vowel.</li>
+          </ul>
+        </ul>
+        <li>The glottal marker <b>ᐧ</b> is typed using the <b>Semi-Colon Key</b> <kbd>;</kbd></li>
+        <li>The combined asterix <b>ᕯ</b> can be typed <kbd>Shift</kbd>+<kbd>8</kbd></li>
+        </li>
+        <li>In the case of a vowel immediately after a syllable final or two vowels that need to be side by side, use
+          the <b>Left-Bracket Key</b> <kbd>[</kbd> to keep the syllables separate.
+          <ul>
+            <li><b>ᙐᒡᣟᐊᐉ</b> is typed <b>sulh[ai</b></li>
+          </ul>
+        </li>
+        <li>All English letters can be typed by pressing <b>Right-Alt / Option </b> followed by the letter(s) you wish
+          to type.</li>
+        <li>All uppercase English letters can be typed by pressing <b>Shift+Right-Alt / Option</b> followed by the
+          letter(s) you wish to type.</li>
+        </ul>
+
+        <h2>Unicode Fonts</h2>
+        <p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong>
+          Please use these fonts when typing in your language as they have been specially built to represent your
+          language as accurately as possible. </p>
+        <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans
+            and Aboriginal Serif</a></h3>
+        <hr>
+      </td>
+    </tr>
+    </li>
+    </ul>
+    <tr>
+      <td colspan="2">
+        <p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’
+          Heritage Language and Culture Council. This keyboard is provided free of charge. </p>
+      </td>
+    </tr>
+  </table>
 
 </body>
-</html>
 
-    
+</html>
