--- a/release/fv/fv_southern_tutchone/source/welcome/welcome.htm
+++ b/release/fv/fv_southern_tutchone/source/welcome/welcome.htm
@@ -1,133 +1,180 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Southern Tutchone Keyboard Layout</title>
 
-<style type="text/css"> <!--
-li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
-p {font-family: "Aboriginal Sans"; }
-h2 {font-family: "Aboriginal Sans"; }
-.legalese { font-size: x-small; }
-h3 {font-family: "Aboriginal Sans";}
-a:link {color: #0000ee; text-decoration:none;}
-a:visited {	color: rgb(0,150,0); text-decoration:none;} 
-a:active {	color: rgb(102,117,184); text-decoration:none;}
-kbd {
-  border-radius: 2px;
-  padding: 2px;
-  border: 1px solid black;
-}
- --> </style>
+  <style type="text/css">
+    <!--
+    li {
+      font-size: medium;
+      margin-bottom: 5px;
+      font-family: "Aboriginal Sans";
+    }
+
+    p {
+      font-family: "Aboriginal Sans";
+    }
+
+    h2 {
+      font-family: "Aboriginal Sans";
+    }
+
+    .legalese {
+      font-size: x-small;
+    }
+
+    h3 {
+      font-family: "Aboriginal Sans";
+    }
+
+    a:link {
+      color: #0000ee;
+      text-decoration: none;
+    }
+
+    a:visited {
+      color: rgb(0, 150, 0);
+      text-decoration: none;
+    }
+
+    a:active {
+      color: rgb(102, 117, 184);
+      text-decoration: none;
+    }
+
+    kbd {
+      border-radius: 2px;
+      padding: 2px;
+      border: 1px solid black;
+    }
+    -->
+  </style>
 
 </head>
 
 
 <body>
-<table width="100%" border="0" cellpadding="0">
-  <tr>
-    <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
-	
-<h1>Southern Tutchone Keyboard</h1>
+  <table width="100%" border="0" cellpadding="0">
+    <tr>
+      <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48"
+            border="0" /></a>
+
+        <h1>Southern Tutchone Keyboard</h1>
 
 
-<ul>
-  <li>The special accents used to type Southern Tutchone are assigned to various punctuation keys and combinations of punctuation keys.</li>
-  <li>Accents are typed by typing the punctuation marks followed by the letter you wish to have the accents on.
-    <ul>
-      <li>To type the diaeresis accent use the Semicolon key <kbd>;</kbd>
         <ul>
-          <li><b>ä </b> is typed <kbd>;</kbd> then <kbd>a</kbd></li> 
+          <li>The special accents used to type Southern Tutchone are assigned to various punctuation keys and
+            combinations of punctuation keys.</li>
+          <li>Accents are typed by typing the punctuation marks followed by the letter you wish to have the accents on.
+            <ul>
+              <li>To type the diaeresis accent use the Semicolon key <kbd>;</kbd>
+                <ul>
+                  <li><b>ä </b> is typed <kbd>;</kbd> then <kbd>a</kbd></li>
+                </ul>
+              </li>
+              <li>To type the acute accent use the Slash key <kbd>/</kbd>
+                <ul>
+                  <li><b>á</b> is typed <kbd>/</kbd> then <kbd>a</kbd></li>
+                </ul>
+              </li>
+              <li>To type the double acute accent use the & key <kbd>Shift</kbd>+<kbd>7</kbd>
+                <ul>
+                  <li><b>a̋</b> is typed <kbd>Shift</kbd>+<kbd>7</kbd> then <kbd>a</kbd></li>
+                </ul>
+              </li>
+              <li>To type the grave accent use the ` key <kbd>`</kbd>
+                <ul>
+                  <li><b>à</b> is typed <kbd>`</kbd> then <kbd>a</kbd></li>
+                </ul>
+              </li>
+              <li>To type the caron accent use the % key <kbd>Shift</kbd>+<kbd>5</kbd>
+                <ul>
+                  <li><b>ǎ</b> is typed <kbd>Shift</kbd>+<kbd>5</kbd> then <kbd>a</kbd></li>
+                </ul>
+              </li>
+              <li>To type the circumflex accent use the ^ key <kbd>Shift</kbd>+<kbd>6</kbd>
+                <ul>
+                  <li><b>â</b> is typed <kbd>Shift</kbd>+<kbd>6</kbd> then <kbd>a</kbd></li>
+                </ul>
+              </li>
+              <li>To type the macron accent use the Equal key <kbd>=</kbd>
+                <ul>
+                  <li><b>ā</b> is typed <kbd>=</kbd> then <kbd>a</kbd></li>
+                </ul>
+              </li>
+              <li>To type the tilde accent use the ~ key <kbd>Shift</kbd>+<kbd>`</kbd>
+                <ul>
+                  <li><b>ã</b> is typed <kbd>Shift</kbd>+<kbd>`</kbd> then <kbd>a</kbd></li>
+                </ul>
+              </li>
+              <li>To type the breve accent use the + key <kbd>Shift</kbd>+<kbd>=</kbd> and the ( key
+                <kbd>Shift</kbd>+<kbd>9</kbd>
+                <ul>
+                  <li><b>ă</b> is typed <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>Shift</kbd>+<kbd>9</kbd> then
+                    <kbd>a</kbd></li>
+                </ul>
+              </li>
+              <li>To type the ogonek accent use the , key <kbd>,</kbd>
+                <ul>
+                  <li><b>ą</b> is typed <kbd>,</kbd> then <kbd>a</kbd></li>
+                </ul>
+              </li>
+              <li>To type the dot below accent use the . key <kbd>.</kbd>
+                <ul>
+                  <li><b>ạ</b> is typed <kbd>.</kbd> then <kbd>a</kbd></li>
+                </ul>
+              </li>
+              <li>To type the ring below accent use the + key <kbd>Shift</kbd>+<kbd>=</kbd> and the ) key
+                <kbd>Shift</kbd>+<kbd>0</kbd>
+                <ul>
+                  <li><b>ḁ</b> is typed <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>Shift</kbd>+<kbd>0</kbd> then
+                    <kbd>a</kbd></li>
+                </ul>
+              </li>
+            </ul>
+          <li>To type multiple accents, type the punctuation associated with the accents in any order followed by the
+            letter you wish to write the accents on
+          <li>
+            <ul>
+              <li><b>ḗ</b> is typed <kbd>=</kbd> then <kbd>/</kbd> then <kbd>e</kbd></li>
+              <li><b>ą̄́</b> is typed <kbd>,</kbd> then <kbd>=</kbd> then <kbd>/</kbd> then <kbd>a</kbd></li>
+            </ul>
+          </li>
+          <li>Some special characters are typed with the plus sign <kbd>Shift</kbd>+<kbd>=</kbd>
+            <ul>
+              <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>Shift</kbd>+<kbd>o</kbd> to get <b>Œ</b></li>
+              <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>o</kbd> to get <b>œ</b></li>
+              <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>9</kbd> to get <b>ǝ</b></li>
+              <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>3</kbd> to get <b>ɛ</b></li>
+              <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>Shift</kbd>+<kbd>/</kbd> to get <b>ʔ</b></li>
+              <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>r</kbd> to get <b>ρ</b></li>
+              <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>x</kbd> to get <b>χ</b></li>
+            </ul>
+          </li>
+          <li>To type the barred l ł, type <kbd>l</kbd>+<kbd>/</kbd></li>
         </ul>
-      </li>
-      <li>To type the acute accent use the Slash key <kbd>/</kbd>
-        <ul>
-          <li><b>á</b> is typed <kbd>/</kbd> then <kbd>a</kbd></li>
-        </ul>
-      </li>
-      <li>To type the double acute accent use the & key <kbd>Shift</kbd>+<kbd>7</kbd>
-        <ul>
-          <li><b>a̋</b> is typed <kbd>Shift</kbd>+<kbd>7</kbd> then <kbd>a</kbd></li>
-        </ul>
-      </li>
-      <li>To type the grave accent use the ` key <kbd>`</kbd>
-        <ul>
-          <li><b>à</b> is typed <kbd>`</kbd> then <kbd>a</kbd></li>
-        </ul>
-      </li>
-      <li>To type the caron accent use the % key <kbd>Shift</kbd>+<kbd>5</kbd>
-        <ul>
-          <li><b>ǎ</b> is typed <kbd>Shift</kbd>+<kbd>5</kbd> then <kbd>a</kbd></li>
-        </ul>
-      </li>
-      <li>To type the circumflex accent use the ^ key <kbd>Shift</kbd>+<kbd>6</kbd> 
-        <ul>
-          <li><b>â</b> is typed <kbd>Shift</kbd>+<kbd>6</kbd> then <kbd>a</kbd></li>
-        </ul>
-      </li>
-      <li>To type the macron accent use the Equal key <kbd>=</kbd> 
-        <ul>
-          <li><b>ā</b> is typed <kbd>=</kbd> then <kbd>a</kbd></li>
-        </ul>
-      </li>
-      <li>To type the tilde accent use the ~ key <kbd>Shift</kbd>+<kbd>`</kbd> 
-        <ul>
-          <li><b>ã</b> is typed <kbd>Shift</kbd>+<kbd>`</kbd> then <kbd>a</kbd></li>
-        </ul>
-      </li>
-      <li>To type the breve accent use the + key <kbd>Shift</kbd>+<kbd>=</kbd> and the ( key <kbd>Shift</kbd>+<kbd>9</kbd>
-        <ul>
-          <li><b>ă</b> is typed <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>Shift</kbd>+<kbd>9</kbd> then <kbd>a</kbd></li>
-        </ul>
-      </li>
-      <li>To type the ogonek accent use the , key <kbd>,</kbd>
-        <ul>
-          <li><b>ą</b> is typed <kbd>,</kbd> then <kbd>a</kbd></li>
-        </ul>
-      </li>
-      <li>To type the dot below accent use the . key <kbd>.</kbd> 
-        <ul>
-          <li><b>ạ</b> is typed <kbd>.</kbd> then <kbd>a</kbd></li>
-        </ul>
-      </li>
-      <li>To type the ring below accent use the + key <kbd>Shift</kbd>+<kbd>=</kbd> and the ) key <kbd>Shift</kbd>+<kbd>0</kbd> 
-        <ul>
-          <li><b>ḁ</b> is typed <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>Shift</kbd>+<kbd>0</kbd> then <kbd>a</kbd></li>
-        </ul>
-      </li>
-    </ul>
-  <li>To type multiple accents, type the punctuation associated with the accents in any order followed by the letter you wish to write the accents on
-    <li>
-      <ul>
-        <li><b>ḗ</b> is typed <kbd>=</kbd> then <kbd>/</kbd> then <kbd>e</kbd></li>
-        <li><b>ą̄́</b> is typed <kbd>,</kbd> then <kbd>=</kbd> then <kbd>/</kbd> then <kbd>a</kbd></li>
-      </ul>
-    </li>
-  <li>Some special characters are typed with the plus sign <kbd>Shift</kbd>+<kbd>=</kbd>
-    <ul>
-      <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>Shift</kbd>+<kbd>o</kbd> to get <b>Œ</b></li>
-      <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>o</kbd> to get <b>œ</b></li>
-      <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>9</kbd> to get <b>ǝ</b></li>
-      <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>3</kbd> to get <b>ɛ</b></li>
-      <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>Shift</kbd>+<kbd>/</kbd> to get <b>ʔ</b></li>                                         
-      <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>r</kbd> to get <b>ρ</b></li>
-      <li>Type <kbd>Shift</kbd>+<kbd>=</kbd> then <kbd>x</kbd> to get <b>χ</b></li>
-    </ul>
-  </li>
-  <li>To type the barred l ł, type <kbd>l</kbd>+<kbd>/</kbd></li>
-</ul>
-</div>
-<h2>Unicode Fonts</h2>
-						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
-    <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
-    <hr></td>
+        </div>
+        <h2>Unicode Fonts</h2>
+        <p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong>
+          Please use these fonts when typing in your language as they have been specially built to represent your
+          language as accurately as possible. </p>
+        <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans
+            and Aboriginal Serif</a></h3>
+        <hr>
+      </td>
 
-  <tr>
-    <td colspan="2"><p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’ Heritage Language and Culture Council. This keyboard is provided free of charge. </p></td>
-  </tr>
-</table>
+    <tr>
+      <td colspan="2">
+        <p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’
+          Heritage Language and Culture Council. This keyboard is provided free of charge. </p>
+      </td>
+    </tr>
+  </table>
 
-<br/>
+  <br />
 
 </body>
+
 </html>
