--- a/release/b/breton_chwerty/source/readme.htm
+++ b/release/b/breton_chwerty/source/readme.htm
@@ -14,7 +14,7 @@
 <h1>Breton chwerty</h1>
 
 <p>
-    Breton chwerty 1.0 generated from template.
+    The Breton "Chwerty" keyboard layout is specifically designed for typing in the Breton language.
 </p>
 
 <p>(c) SIL International</p>
