--- a/release/f/foochow/source/readme.htm
+++ b/release/f/foochow/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>foochow</h1>
 
 <p>
-    foochow 1.0 generated from template.
+    foochow 1.0.1 for east-hokkienese hók-ciŭ-uâ.福州話閩東語羅馬字輸入法
 </p>
 <p> e-mail: goetiansoc@proton.me</p>
 <p> telegram: https://t.me/cathaylab</p>
