--- a/release/f/foochow/source/welcome.htm
+++ b/release/f/foochow/source/welcome.htm
@@ -14,25 +14,25 @@
 <h1>Start Using foochow</h1>
 
 <p>
-    foochow for east-hokkienese hók-ciŭ-uâ.
+    foochow for east-hokkienese hók-ciŭ-uâ.福州話閩東語羅馬字輸入法
 </p>
-specific letters: aa = a̤, oo = o̤, uu = ṳ,ee = e̤, euu = e̤ṳ, enge= e̤ng,ungu = ṳng, eungu = e̤ṳng
+<p> specific letters特殊字母: aa > a̤, oo > o̤, uu > ṳ,ee > e̤, euu > e̤ṳ, enge > e̤ng,ungu > ṳng, eung > e̤ṳng, aeng > ae̤ng </p>
 <p>
-tones: as = á, af = à, aw = ă, ar = ā, aj = â
+tones音調: as > á, af > à, aw > ă, ar > ā, aj > â
 </P>
 <!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
 
-<h1> Phonology Map </h1>
-<p> consonants <p/>
+<h1> Phonology Map 音韻表 </h1>
+<p> consonants輔音 <p/>
 <img src='consonants.png' alt='Keyboard Layout'>
-<p> vowels and combinations <p/>
+<p> vowels and combinations元音和組合 <p/>
 <img src='vowels.png' alt='Keyboard Layout'> <p/>
 <img src='h.png' alt='Keyboard Layout'> <p/>
 <img src='ng.png' alt='Keyboard Layout'> <p/>
 
-<p> tones <p/>
+<p> tones音調 <p/>
 <img src='tones.png' alt='Keyboard Layout'>
-<h1>Keyboard Layout</h1>
+<h1>Keyboard Layout鍵盤佈置</h1>
 
 <p><b>Unshifted</b></p>
 <img src='uchauU_.png' alt='Keyboard Layout'>
