--- a/release/t/taigi_viet_telex/source/readme.htm
+++ b/release/t/taigi_viet_telex/source/readme.htm
@@ -18,7 +18,7 @@
     Taigi Viet Telex for Tâi-gí (Taiwanese) pe̍h-ōe-jī.
 </p>
 
-<p>© cathaylab 2024-2024</p>
+<p>© cathaylab</p>
 
 <p> e-mail: goetiansoc@proton.me</p>
 <p> telegram: https://t.me/cathaylab</p>
