--- a/release/fv/fv_hlgaagilda_xaayda_kil/source/welcome/welcome.htm
+++ b/release/fv/fv_hlgaagilda_xaayda_kil/source/welcome/welcome.htm
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
   <meta charset="utf-8">
-  <title>X̱aayda-X̱aad Kil Keyboard</title>
+<title>hən̓q̓əmin̓əm̓</title>
+
+<style type="text/css"> <!--
+li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
+p {font-family: "Aboriginal Sans"; }
+h2 {font-family: "Aboriginal Sans"; }
+.legalese { font-size: x-small; }
+h3 {font-family: "Aboriginal Sans";}
+a:link {color: #0000ee; text-decoration:none;}
+a:visited {	color: rgb(0,150,0); text-decoration:none;} 
+a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
+ --> </style>
+
 </head>
 
-<body style=
-"PADDING-RIGHT: 25px; PADDING-LEFT: 25px; PADDING-BOTTOM: 25px; MARGIN: 0px; PADDING-TOP: 25px; max-width:600px">
-<div style="font-size: 85%;">
+<body>
+<table width="100%" border="0" cellpadding="0">
+  <tr>
+    <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
 	
 <h1>X̱aayda-X̱aad Kil Keyboard</h1>
 
@@ -14,12 +33,24 @@
 This keyboard is designed for the <b>X̱aayda-X̱aad Kil</b> language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.
 </p>
 
-<div id='xaidakil_kmw_help'>
 <ul>
-<li>To type the underline accent use the Semicolon key ;. g̱ is typed g then Semicolon.</li>
-<li>To type the acute accent use the Grave key `. á is typed a then Grave.</li>
-<li>To type the grave accent use the Shift+Grave key. à is typed a then Shift+Grave.</li>
-<li>To type the circumflex accent use the Shift+6 key. ĝ is typed g then Shift+6.</li>
+<li>To type the underline accent use the Semicolon key <kbd>;</kbd> — g̱ is typed <kbd>g</kbd> then <kbd>;</kbd></li>
+<li>To type the acute accent use the Backquote key <kbd>`</kbd> — á is typed <kbd>a</kbd> then <kbd>`</kbd></li>
+<li>To type the grave accent use the Shift+Backquote keys — à is typed <kbd>a</kbd> then <kbd>Shift</kbd>+<kbd>`</kbd></li>
+<li>To type the circumflex accent use the Shift+6 keys — ĝ is typed <kbd>g</kbd> then <kbd>Shift</kbd>+<kbd>6</kbd></li>
+<li>You can type the Original English punctuation by holding down the Right-Alt or Option key. The Semicolon ; is typed <kbd>Right-Alt</kbd>+<kbd>;</kbd> (Windows) / <kbd>⌥ Option</kbd>+<kbd>;</kbd> (Mac)
+  <ul>
+    <li><strong>NOTE:</strong> When using Google Docs, Slash / is typed <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>/</kbd> (Windows) / <kbd>⌥ Option</kbd>+<kbd>Shift</kbd>+<kbd>/</kbd> (Mac)</li>
+  </ul>
+</li>
+<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option keys.
+  <ul>
+    <li>Single: ‘ <kbd>Shift</kbd>+<kbd>\</kbd> — ’ <kbd>'</kbd></li>
+    <li>Double: “ <kbd>Shift</kbd>+<kbd>[</kbd> — ” <kbd>Shift</kbd>+<kbd>]</kbd></li>
+    <li>Single: ‹ <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>9</kbd> — › <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>0</kbd></li>
+    <li>Double: « <kbd>Right-Alt</kbd>+<kbd>0</kbd> — » <kbd>Right-Alt</kbd>+<kbd>0</kbd></li>
+  </ul>
+</li>
 </ul>
 </div>
 
@@ -34,23 +65,21 @@ This keyboard is designed for the <b>X̱aayda-X̱aad Kil</b> language of the BC 
     <h3>Shift RALT</h3>
     <p><img src="fv_hlgaagilda_xaayda_kilU_SCA.png" alt="X̱aayda-X̱aad Kil Keyboard: shift ralt"></p>
 
-
-
-<h2>Notes on touch layout</h2>
-<div id='wikitext'>
-<div class='vspace'></div>
-<table border='1' style='border-collapse:collapse' cellpadding='5' ><tr ><td  align='center'>? !</td><td  align='center'>w</td><td  align='center'>e é è</td><td  align='center'>-</td><td  align='center'>t</td><td  align='center'>y</td><td  align='center'>u ú ù</td><td  align='center'>i í ì</td><td  align='center'>o ó ò</td><td  align='center'>p</td></tr>
-<tr ><td  align='center'>a á à</td><td  align='center'>s</td><td  align='center'>d</td><th  align='center'>_</th><td  align='center'>g g̱ ĝ</td><td  align='center'>h</td><td  align='center'>j</td><td  align='center'>k ḵ</td><td  align='center'>l</td><td  align='center'>' "</td></tr>
-<tr ><td >&nbsp;</td><td  align='center'>,</td><td  align='center'>x x̱ x̂</td><td  align='center'>c</td><td  align='center'>.</td><td  align='center'>b</td><td  align='center'>n</td><td  align='center'>m</td><td  colspan='2'>&nbsp;</td></tr>
+    <h2>Unicode Fonts</h2>
+		<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+    
+	<h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
+    
+	<hr></td>
+  </tr>
+  <tr>
+    <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
+    <td valign="middle"><a href="http://www.languagegeek.com"><img src="lgBlue162x31.png" width="162" height="31" border="0"/></a></td>
+  </tr>
+  <tr>
+    <td colspan="2"><p class="legalese">Development of this keyboard layout was funded by FirstVoices and the First Peoples’ Heritage Language and Culture Council. This keyboard is provided free of charge. </p></td>
+  </tr>
 </table>
-<div class='vspace'></div><ul><li>the first character in a cell is the "one-tap" key, any further characters are "hold-select" keys.
-</li></ul><div class='vspace'></div><h3>Alternate Name</h3>
-<p>Haida
-</p>
-</div>
-
-
-<br/>
 
 </body>
 </html>
