fixed on-screen kb

--- a/release/fv/fv_lekwungen/source/welcome/welcome.htm
+++ b/release/fv/fv_lekwungen/source/welcome/welcome.htm
@@ -40,8 +40,8 @@ kbd {
 					</ul>
 					<li>All changed punctuation and number keys can type their original value by holding down the <kbd>Right-Alt</kbd> or <kbd>Option</kbd> key.
 						<ul>
-							<li>The Semicolon ; is typed <kbd>RightAlt</kbd>+<kbd>Semicolon</kbd> (Windows) or <kbd>Option</kbd>+<kbd>Semicolon</kbd> (Mac)</li>
-							<li>The number 1 is typed <kbd>RightAlt</kbd>+<kbd>1</kbd> (Windows) or <kbd>Option</kbd>+<kbd>1</kbd> (Mac)</li>
+							<li>The Semicolon ; is typed <kbd>Right-Alt</kbd>+<kbd>Semicolon</kbd> (Windows) or <kbd>Option</kbd>+<kbd>Semicolon</kbd> (Mac)</li>
+							<li>The number 1 is typed <kbd>Right-Alt</kbd>+<kbd>1</kbd> (Windows) or <kbd>Option</kbd>+<kbd>1</kbd> (Mac)</li>
 						</ul>
 					</li>
 				</ul>
