--- a/release/fv/fv_haisla/source/fv_haisla-help.htm
+++ b/release/fv/fv_haisla/source/fv_haisla-help.htm
@@ -12,4 +12,20 @@
 </p>
 <!-- Insert Keyboard Layout Images or HTML here -->
 <p>
-The Haisla keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="fv_haisla_keycombos.pdf">this document</a> to download a PDF with all of the special key combinations.</p>
+    The Haisla keyboard uses the English keyboard as a base, with added key combinations in order to create special characters.</p>
+    <li>Most special characters are typed by typing a punctuation mark followed by a letter <strong>without</strong> a space between them.
+      <ul>
+        <li>To type the Acute accent ´ use the Semicolon key ; followed by a vowel  —  é is typed ; then e</li>
+        <li>To type the Combining Apostrophe ’ use the Semicolon key ; followed by a consonant  —  m̓ is typed ; then m</li>
+        <li>To type the Macron accent ¯ use the Equals key =  —  x̄ is typed = then x</li>
+        <li>To type the l with tilde <b>ɫ</b> use the Equals key = followed by the l key l</li>
+      </ul>
+    </li>
+    <li>The Lambda, Barred Lambda, and Barred Lambda with Apostrophe are typed by using combinations of the CTRL, l, and hyphen keys.
+      <ul>
+        <li><b>λ</b> is typed CTRL+l</li>
+        <li><b>ƛ</b> is typed CTRL+l+-</li>
+        <li><b>ƛ̓</b> is typed CTRL+l+-+-</li>
+      </ul>
+    </li>
+    <li>The raised w <b>ʷ</b> is typed Right-Alt+w (Windows) or ⌥ Option+w (Mac)</li>
