--- a/release/fv/fv_henqeminem/source/welcome/welcome.htm
+++ b/release/fv/fv_henqeminem/source/welcome/welcome.htm
@@ -13,6 +13,11 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
  --> </style>
 
 </head>
@@ -23,36 +28,40 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
      
     <h2><img src="Henqeminem_U_.png" alt="" height="198" width="514" border="0" /></h2>
+			<ul>
+			<li>The above keymap shows the special characters that have been assigned to the number keys. To type numerals, hold down the Right-Alt or Option key then press the appropriate number key. The Numeric keypad on the right side of many keyboards keeps its original numbers.</li>
+			<li>All accents are typed after the base character: t̓ is typed t then Apostrophe '
+				<ul>
+					<li>To type the glottalized accent use the Apostrophe key <kbd>'</kbd> — k̓ is typed <kbd>k</kbd> then Apostrophe <kbd>'</kbd></li>
+					<li>To type the acute accent use the Semicolon key <kbd>;</kbd> — á is typed <kbd>a</kbd> then Semicolon <kbd>;</kbd></li>
+					<li>To type the háček accent use the Shift+Backquote key — č is typed c then Shift+Backquote<br />
+								The letters č, š, x̌ also have their own keys: <kbd>5</kbd>, <kbd>6</kbd>, <kbd>7</kbd>.</li>
+					<li>To type the grave accent use the Backquote key <kbd>`</kbd> — à is typed <kbd>a</kbd> then Backquote <kbd>`</kbd></li>
+					<li>To type the <strong>belted-ɬ</strong> press the <kbd>9</kbd> key.</li>
+				</ul></li>
+				<li>All changed punctuation can type their original value by holding down the <kbd>Right-Alt</kbd> key (Win) or <kbd>Option</kbd> key (Mac). <br />
+							The Semicolon <kbd>;</kbd> is typed <kbd>Right-Alt</kbd>+<kbd>;</kbd> (Win) or <kbd>Option</kbd>+;</kbd> (Mac).</li>
+	</ul>	
+	<h2><img src="Henqeminem_U_RA.png" alt="" height="198" width="514" border="0" /></h2>	
+	<ul>
+				<li>There are several additional characters which can be typed holding down the Right-Alt or Option key.</li>
 					<ul>
-						<li>The above keymap shows the special characters that have been assigned to the number keys. To type numerals, hold down the Right-Alt or Option key then press the appropriate number key. The Numeric keypad on the right side of many keyboards keeps its original numbers.</li>
-						<li>All accents are typed after the base character: t̓ is typed t then Apostrophe '</li>
-						<ul>
-							<li>To type the glottalized accent use the Apostrophe key ' — k̓ is typed k then Apostrophe '</li>
-							<li>To type the acute accent use the Semicolon key ; — á is typed a then Semicolon ;</li>
-							<li>To type the háček accent use the Shift+Backquote key (next to the 1 key) — č is typed c then Shift+Backquote<br />
-									The letters č, š, x̌ also have their own keys: 5, 6, 7.</li>
-							<li>To type the grave accent use the Backquote key ` (next to the 1 key) — à is typed a then Backquote `</li>
-							<li>To type the belted-ɬ press the 9 key.</li>
-						</ul>
-						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Semicolon ; is typed RightAlt+Semicolon (Windows) Option+Semicolon (Mac).</li>
+						<li>The <strong>chi-χ</strong> is typed <kbd>Right-Alt</kbd>+<kbd>x</kbd> (Windows) or <kbd>Option</kbd>+<kbd>x</kbd> (Mac).</li>
+						<li>The <strong>barred-ł</strong> is typed <kbd>Right-Alt</kbd>+<kbd>l</kbd> (Win) or <kbd>Option</kbd>+<kbd>l</kbd> (Mac).</li>
+						<li> The <strong>middle dot ·</strong> is typed <kbd>Right-Alt</kbd>+<kbd>.</kbd> (Win) or <kbd>Option</kbd>+<kbd>.</kbd> (Mac). </li>
+						<li> The <strong>raised theta ᶿ</strong> is typed <kbd>Right-Alt</kbd>+<kbd>t</kbd> (Win) or <kbd>Option</kbd>+<kbd>t</kbd> (Mac). </li>
 					</ul>
-	<h2><img src="Henqeminem_U_RA.png" alt="" height="198" width="514" border="0" /></h2>
+				<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.</li>
 					<ul>
-						<li>There are several characters of hən̓q̓əmin̓əm̓ which can be typed holding down the Right-Alt or Option key.</li>
-							<ul>
-								<li>The <strong>chi-χ</strong> is typed Right-Alt+x (Windows) Option+x (Mac).</li>
-								<li>The <strong>barred-ł</strong> is typed Right-Alt+l (Windows) Option+l (Mac).</li>
-								<li> The <strong>middle dot ·</strong> is typed Right-Alt+. (Windows) Option+. (Mac). </li>
-								<li> The <strong>raised theta ᶿ</strong> is typed Right-Alt+t (Windows) Option+t (Mac). </li>
-							</ul>
-						<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.</li>
-							<ul>
-								<li>single: ‘ Left-Bracket — ’ Right-Bracket</li>
-								<li>double: “ Shift+Left-Bracket — ” Shift+Right-Bracket</li>
-								<li>single ‹ RightAlt+Shift+9 — › Right-Alt+Shift+0</li>
-								<li>double « RightAlt+9 — » Right-Alt+0</li>
-							</ul>
+						<li>single: ‘ Left-Bracket <kbd>[</kbd> — ’ Right-Bracket <kbd>]</kbd></li>
+						<li>double: “ <kbd>Shift</kbd>+<kbd>[</kbd> — ” <kbd>Shift</kbd>+<kbd>]</kbd></li>
+						<li>single ‹ <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>9</kbd> — › <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>0</kbd></li>
+						<li>double « <kbd>Right-Alt</kbd>+<kbd>9</kbd> — » <kbd>Right-Alt</kbd>+<kbd>0</kbd></li>
 					</ul>
+				<li>All changed punctuation can type their original value by holding down the <kbd>Right-Alt</kbd> key (Win) or <kbd>Option</kbd> key (Mac). <br />
+							The Semicolon <kbd>;</kbd> is typed <kbd>Right-Alt</kbd>+<kbd>;</kbd> (Win) or <kbd>Option</kbd>+<kbd>;</kbd> (Mac).</li>
+	</ul>
+					
 	
 	<h2>Unicode Fonts</h2>
 		<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
