updated help docs, dev version

--- a/release/fv/fv_halqemeylem/source/welcome/welcome.htm
+++ b/release/fv/fv_halqemeylem/source/welcome/welcome.htm
@@ -13,6 +13,11 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
  --> </style>
 
 </head>
@@ -24,19 +29,22 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
      
     <h2><img src="Halqemeylem.png" alt="" height="198" width="514" border="0" /></h2>
 					<ul>
-						<li>All accents are typed after the base character: á is typed a then Slash /</li>
-						<li>To type the acute accent use the Slash key / — é is typed e then Slash /</li>
-						<li>To type the grave accent use the Backquote key ` — è is typed e then Backquote `</li>
-						<li>The original English punctuation keys can be typed by holding down the Right-Alt or Option key. The Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac).</li>
-						<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.</li>
+						<li>All tone marks are typed after the base character.
+							<ul><li>á is typed <kbd>a</kbd> then Slash <kbd>/</kbd></li></ul></li>
+						<li>To type the <b>high tone</b> use the Slash key <kbd>/</kbd> — é is typed <kbd>e</kbd> then Slash /</li>
+						<li>To type the <b>mid tone</b> use the Backquote key <kbd>`</kbd> — è is typed <kbd>e</kbd> then Backquote <kbd>`</kbd></li>
+						<li>The original English punctuation keys can be typed by holding down the <kbd>Right-Alt</kbd> key (Win) or <kbd>Option</kbd> key (Mac). The Semicolon ; is typed <kbd>Right-Alt</kbd>+<kbd>;</kbd> (Win) or <kbd>Option</kbd>+<kbd>;</kbd> (Mac).</li>
+						<li>Opening and closing quotes. For Mac users, <kbd>Option</kbd> is instead of the <kbd>Right-Alt</kbd> Key.</li>
 						<ul>
-									<li>single: ‘ Shift+Backquote — ’ Apostrophe</li>
+									<li>single: ‘ Shift+` (Backquote) — ’ Apostrophe</li>
 									<li>double: “ Shift+Hyphen — ” Shift+Equals</li>
 									<li>single ‹ Right-Alt+Shift+9 — › Right-Alt+Shift+0</li>
 									<li>double « Right-Alt+9 — » Right-Alt+0</li>
 								</ul>
-						<h2>Unicode Fonts</h2>
-						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+					</ul>
+					
+	<h2>Unicode Fonts</h2>
+	<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
     <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
     <hr></td>
   </tr>
