--- a/release/fv/fv_smalgyax/source/welcome/welcome.htm
+++ b/release/fv/fv_smalgyax/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sm’algya̱x</title>
+  <title>Sm'algya̱x</title>
 
 <style type="text/css"> <!--
 li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
@@ -13,6 +13,11 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
  --> </style>
 
 </head>
@@ -24,22 +29,22 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
      
     <h2><img src="Tsimshian.png" alt="" height="198" width="514" border="0" /></h2>
 					<ul>
-						<li>All accents are typed after the base character — a̱ is typed a then Semicolon ;
+						<li>All accents are typed after the base character — a̱ is typed <kbd>a</kbd> then Semicolon <kbd>;</kbd>
               <ul>
-						    <li>To type the underline accent use the Semicolon key ; — ḵ is typed k then Semicolon ;</li>
+						    <li>To type the underline accent use the Semicolon key ; — ḵ is typed <kbd>k</kbd> then Semicolon <kbd>;</kbd></li>
               </ul>
             </li>
-						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac).
+						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Semicolon ; is typed <kbd>Right-Alt</kbd>+<kbd>;</kbd> (Windows) / <kbd>⌥ Option</kbd>+<kbd>;</kbd> (Mac).
               <ul>
-                  <li>NOTE: When using Google Docs, / is typed Shift+Right-alt+Slash / (Windows) or Shift+Option+Slash / (Mac)</li>
+                  <li>NOTE: When using Google Docs, Slash / is typed <kbd>Shift</kbd>+<kbd>Right-Alt</kbd>+<kbd>/</kbd> (Windows) or <kbd>Shift</kbd>+<kbd>⌥ Option</kbd>+<kbd>/</kbd> (Mac)</li>
               </ul>
             </li>
 						<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.
 						  <ul>
-									<li>single: ‘ Backquote — ’ Apostrophe</li>
-									<li>double: “ Shift+Hyphen — ” Shift+Equals</li>
-									<li>single ‹ Right-Alt+Shift+9 — › Right-Alt+Shift+0</li>
-									<li>double « Right-Alt+9 — » Right-Alt+0</li>
+									<li>single: ‘ <kbd>`</kbd> — ’ <kbd>'</kbd></li>
+									<li>double: “ <kbd>Shift</kbd>+<kbd>-</kbd> — ” <kbd>Shift</kbd>+<kbd>=</kbd></li>
+									<li>single ‹ <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>9</kbd> — › <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>0</kbd></li>
+									<li>double « <kbd>Right-Alt</kbd>+<kbd>9</kbd> — » <kbd>Right-Alt</kbd>+<kbd>9</kbd></li>
 						  </ul>
             </li>
 						<h2>Unicode Fonts</h2>
