--- a/release/fv/fv_sencoten/source/welcome/welcome.htm
+++ b/release/fv/fv_sencoten/source/welcome/welcome.htm
@@ -13,6 +13,11 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
  --> </style>
 
 </head>
@@ -23,34 +28,33 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
      
 	<h2>Desktop keyboard</h2>
-	<p>
-		To type in SENĆOŦEN on Mac or PC, turn CAPS LOCK on.
-		To type a special character, type the base character and then type an accenting key.
-		(Ć is typed C then Apostrophe ')
-	</p>
+
+	<p>To type in SENĆOŦEN on Mac or PC, turn <kbd>CAPS LOCK</kbd> on. To type a special character, type the base character and then type an accenting key. (Ṯ is typed <kbd>T</kbd> then Semicolon <kbd>;</kbd>)</p>
+	
 	<img src="Sencoten_copy.png" />
-	<ul>
-		<li>To type the acute accent use the Apostrophe key ' — Ć is typed C then Apostrophe '</li>
-		<li>To type the slash accent use the Slash key / — Ⱥ is typed A then Slash /</li>
-		<li>To type the dash accent use the Hyphen key - — Ŧ is typed T then Hyphen -</li>
-		<li>There are two options to type the low line accent:
-			<ul>
-				<li>Use the Semicolon key ; — Ṉ is typed N then Semicolon ;</li>
-				<li>Use the Underscore key _ — Ṉ is typed N then Shift-Underscore _</li>
-			</ul>
-		</li>
-		<li>To type cedilla (glottal stop) press Shift+Comma , OR turn on Caps Lock and type Comma , (Cedilla is treated as
-			capitalized comma.)</li>
-		<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.</li>
+<ul>
+	<li>To type the <b>acute accent ´</b> use the Apostrophe key <kbd>'</kbd> — Ć is typed <kbd>C</kbd> then Apostrophe <kbd>'</kbd></li>
+	<li>To type the <b>slash accent</b> use the Slash key <kbd>/</kbd> — Ⱥ is typed <kbd>A</kbd> then Slash <kbd>/</kbd></li>
+	<li>To type the <b>dash accent</b> use the Hyphen key <kbd>-</kbd> — Ŧ is typed <kbd>T</kbd> then Hyphen <kbd>-</kbd></li>
+	<li>There are two options to type the <b>low line accent</b>:
 		<ul>
-			<li>single: « Left-Bracket — » Right-Bracket</li>
-			<li>double: ‹ Shift+Left-Bracket — › Shift+Right-Bracket</li>
+			<li>Use the Semicolon key <kbd>;</kbd> — Ṉ is typed <kbd>N</kbd> then Semicolon <kbd>;</kbd></li>
+			<li>Use the Underscore key <kbd>_</kbd> — Ṉ is typed <kbd>N</kbd> then <kbd>Shift</kbd>+<kbd>_</kbd> Underscore</li>
 		</ul>
-		<li>
-			The original English punctuation keys can always be typed by holding down the Right-Alt or Option key.
-			The slash / is typed Right-Alt+Slash (Windows) Option+Slash (Mac).
-		</li>
-	</ul>
+	</li>
+	<li>To type cedilla (glottal stop) press <kbd>Shift</kbd>+<kbd>,</kbd> (Comma) OR turn on <kbd>Caps Lock</kbd> and type Comma <kbd>,</kbd> (Cedilla is treated as capitalized comma.)</li>
+	<li>Opening and closing quotes. For Mac users, <kbd>Right-Alt</kbd> is either of the <kbd>Option</kbd> Keys.
+		<ul>
+			<li>double: « Left-Bracket <kbd>[</kbd> — » Right-Bracket <kbd>]</kbd></li>
+			<li>single: ‹ <kbd>Shift</kbd>+<kbd>[</kbd> Left-Bracket — › <kbd>Shift</kbd>+<kbd>]</kbd> Right-Bracket</li>
+		</ul>
+	</li>
+	<li>The original English punctuation keys can always be typed by holding down the <kbd>Right-Alt</kbd> key (Windows) or <kbd>Option</kbd> key (Mac).
+		<ul>
+			<li>The slash / is typed <kbd>Right-Alt</kbd>+<kbd>/</kbd> (Windows) or <kbd>Option</kbd>+<kbd>/</kbd> (Mac).</li>
+		</ul>
+	</li>
+</ul>
 	
 	<h3>Unicode Fonts</h3>
 	<p>
