--- a/release/fv/fv_anishinaabemowin/source/welcome/welcome.htm
+++ b/release/fv/fv_anishinaabemowin/source/welcome/welcome.htm
@@ -13,6 +13,11 @@ h3 {font-family: "Aboriginal Sans";}
 a:link {color: #0000ee; text-decoration:none;}
 a:visited {	color: rgb(0,150,0); text-decoration:none;} 
 a:active {	color: rgb(102,117,184); text-decoration:none;}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
  --> </style>
 
 </head>
@@ -25,14 +30,14 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
         <h2>Desktop Layout</h2>
 
 					<ul>
-						<li>Accents are typed after the base letter — ā is typed a then Left-Bracket [
+						<li>Accents are typed after the base letter — ā is typed <kbd>a</kbd> then Left-Bracket <kbd>[</kbd>
               <ul>
-						    <li>To type the macron accent use the Left-Bracket key [ —  ō is typed o then Left-Bracket [</li>
-						    <li>To type the circumflex accent use the Right-Bracket key ] - ê is typed e then Right-Bracket ]</li>
-						    <li>To type the caron accent use the Backslash key \ — š is typed a then Backslash \</li>
+						    <li>To type the macron accent use the Left-Bracket key <kbd>[</kbd> —  ō is typed <kbd>o</kbd> then <kbd>[</kbd></li>
+						    <li>To type the circumflex accent use the Right-Bracket key <kbd>]</kbd> — ê is typed <kbd>e</kbd> then <kbd>]</kbd></li>
+						    <li>To type the caron accent use the Backslash key <kbd>\</kbd> — š is typed <kbd>s</kbd> then <kbd>\</kbd></li>
               </ul>
             </li>
-						<li>You can type the original English punctuation by holding down the Right-Alt or Option key — the Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac).</li>
+						<li>You can type the original English punctuation by holding down the Right-Alt or Option key — the Semicolon ; is typed <kbd>Right-Alt</kbd>+<kbd>;</kbd> (Windows) / <kbd>⌥ Option</kbd>+<kbd>;</kbd> (Mac).</li>
 					</ul>	
           <h2>Unicode Fonts</h2>
 						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
