--- a/release/fv/fv_nexwslayemucen/source/welcome/welcome.htm
+++ b/release/fv/fv_nexwslayemucen/source/welcome/welcome.htm
@@ -60,7 +60,7 @@ kbd {
 	<li>The glottalized barred lambda ƛ̕  is typed <kbd>u</kbd> <kbd>i</kbd></li>
 	<li>Some additional symbos are listed here.
 		<ul>
-			<li><kbd>;</kbd> <kbd>.</kbd> types ˑ (the middle dot)</li>
+			<li><kbd>.</kbd> <kbd>.</kbd> types … (ellipsis)</li>
 			<li><kbd>;</kbd> <kbd>\</kbd> types √</li>
 			<li><kbd>;</kbd> <kbd>=</kbd> types ≠</li>
 		</ul>
