--- a/release/fv/fv_nexwslayemucen/source/welcome/welcome.htm
+++ b/release/fv/fv_nexwslayemucen/source/welcome/welcome.htm
@@ -30,7 +30,7 @@ kbd {
 <h2><img src="klallam_U_.png" alt="" height="198" width="514" border="0" /></h2>
 
 <ul>
-	<li>The image above showed the letters of Nəxʷsƛ̓ay̓əmúcən that have been assigned to individual keys. The original English value of the keys can still be typed by holding the <kbd>Right-Alt</kbd> key (Win) or <kbd>Option</kbd> key (Mac)
+	<li>The image above shows the letters of Nəxʷsƛ̓ay̓əmúcən that have been assigned to individual keys. The original English value of the keys can still be typed by holding the <kbd>Right-Alt</kbd> key (Win) or <kbd>Option</kbd> key (Mac)
 		<ul>
 			<li>ŋ is typed with the <kbd>g</kbd> key</li>
 			<li>g is typed with the <kbd>Right-Alt</kbd>+<kbd>g</kbd> (Win) or <kbd>Option</kbd>+<kbd>g</kbd> (Mac)</li>
@@ -58,7 +58,7 @@ kbd {
 		</ul>
 	</li>
 	<li>The glottalized barred lambda ƛ̕  is typed <kbd>u</kbd> <kbd>i</kbd></li>
-	<li>Some additional symbos are listed here.
+	<li>Some additional symbols are listed here.
 		<ul>
 			<li><kbd>.</kbd> <kbd>.</kbd> types … (ellipsis)</li>
 			<li><kbd>;</kbd> <kbd>\</kbd> types √</li>
