--- a/release/fv/fv_nisgaa/source/welcome/welcome.htm
+++ b/release/fv/fv_nisgaa/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Nisg̱a’a</title>
+  <title>Nisg̱a'a</title>
 
 <style type="text/css"> <!--
 li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
