fv_nlha7kapmxtsin
Further tidied documentation

--- a/release/fv/fv_nlha7kapmxtsin/source/welcome/welcome.htm
+++ b/release/fv/fv_nlha7kapmxtsin/source/welcome/welcome.htm
@@ -36,10 +36,11 @@ kbd {
 								<li>To type the low line accent use the Right Bracket Key <kbd>]</kbd> — g̱ is typed <kbd>g</kbd> then <kbd>]</kbd></li>
 							</ul>
             </li>
-						<li>The original values of the punctuation keys can be typed by holding down the Right-Alt or Option key. The Slash / is typed <kbd>Right-Alt</kbd>+<kbd>/</kbd>(Windows) / <kbd>⌥ Option</kbd>+<kbd>/</kbd> (Mac).</li>
+						<li>The original values of the punctuation keys can be typed by holding down the Right-Alt or Option key. The Slash / is typed <kbd>Right-Alt</kbd>+<kbd>/</kbd>(Windows) / <kbd>⌥ Option</kbd>+<kbd>/</kbd> (Mac).
               <ul>
                   <li>NOTE: To type / while using Google Drive, use <kbd>Right-Alt</kbd>+<kbd>Shift</kbd>+<kbd>/</kbd> (Windows) or <kbd>⌥ Option</kbd>+<kbd>Shift</kbd>+<kbd>/</kbd> (Mac)</li>
               </ul>
+            </li>
 					</ul>
           <h2>Unicode Fonts</h2>
 						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
