fv_severn_ojibwa_rdot
Corrected error in instructions, added red background to combining key in .php

--- a/release/fv/fv_severn_ojibwa_rdot/source/welcome/welcome.htm
+++ b/release/fv/fv_severn_ojibwa_rdot/source/welcome/welcome.htm
@@ -86,7 +86,7 @@ kbd {
 			</ul>
 		</li>
 		<li>All English letters can be typed by pressing <kbd>Right-Alt</kbd> (Windows) / <kbd>⌥ Option</kbd> (Mac) followed by the letter(s) you wish to type.</li>
-		<li>All uppercase English letters can be typed by pressing <kbd>Right-Alt</kbd> (Windows) / <kbd>⌥ Option</kbd> (Mac) followed by the letter(s) you wish to type.</li>
+		<li>All uppercase English letters can be typed by pressing <kbd>Shift</kbd>+<kbd>Right-Alt</kbd> (Windows) / <kbd>Shift</kbd>+<kbd>⌥ Option</kbd> (Mac) followed by the letter(s) you wish to type.</li>
 	</ul>
 
 		<h2>Unicode Fonts</h2>
