updated help docs

--- a/release/fv/fv_nexwslayemucen/source/welcome/welcome.htm
+++ b/release/fv/fv_nexwslayemucen/source/welcome/welcome.htm
@@ -36,12 +36,18 @@ kbd {
 			<li>g is typed with the <kbd>Right-Alt</kbd>+<kbd>g</kbd> (Win) or <kbd>Option</kbd>+<kbd>g</kbd> (Mac)</li>
 		</ul>
 	</li>
-	<li>To type the glottal accent, type the base character first, followed by the <kbd>d</kbd> key.
+	<li>The glottalized barred lambda ƛ̕  is typed <kbd>u</kbr> <kbd>i</kbd>
+		<ul>
+			<li>If you wish to type the English letters "ui", type <kbd>u</kbd> then <kbd>Right-Alt</kbd>+<kbd>i</kbd> (Win) or <kbd>Option</kbd>+<kbd>i</kbd> (Mac).</li>
+			<li>To type "fruit", type <kbd>Right-Alt</kbd>+<kbd>f</kbd> <kbd>Right-Alt</kbd>+<kbd>r</kbd> <kbd>u</kbd> <kbd>Right-Alt</kbd>+<kbd>i</kbd> <kbd>t</kbd> </li>
+		</ul>
+	</li>
+	<li>To type the glottal accent, type the base character first, followed by the <kbd>d</kbd> key (with no space in between).
 		<ul>
 			<li>q̕ is typed <kbd>q</kbd> then <kbd>d</kbd></li>
 		</ul>
 	</li>	
-	<li>To type acccented vowels, type the Semicolon key <kbd>;</kbd> first, followed by the base vowel.
+	<li>To type acccented vowels, type the Semicolon key <kbd>;</kbd> first, followed by the base vowel (with no space in between).
 		<ul>
 			<li><kbd>;</kbd> <kbd>a</kbd> types á</li>
 			<li><kbd>;</kbd> <kbd>e</kbd> types é</li>
@@ -54,10 +60,10 @@ kbd {
 		<ul>
 			<li><kbd>;</kbd> <kbd>l</kbd> types l</li>
 			<li><kbd>;</kbd> <kbd>q</kbd> types qʷ</li>
-			<li><kbd>;</kbd> <kbd>z</kbd> or <kbd>;</kbd> <kbd>x</kbd> types x̣ʷ</li>
+			<li><kbd>;</kbd> <kbd>z</kbd> or <kbd>;</kbd>+<kbd>x</kbd> types x̣ʷ</li>
 		</ul>
 	</li>
-	<li>The glottalized barred lambda ƛ̕  is typed <kbd>u</kbd> <kbd>i</kbd></li>
+
 	<li>Some additional symbols are listed here.
 		<ul>
 			<li><kbd>.</kbd> <kbd>.</kbd> types … (ellipsis)</li>
