--- a/release/y/yiddish_pasekh/source/welcome/welcome.htm
+++ b/release/y/yiddish_pasekh/source/welcome/welcome.htm
@@ -30,12 +30,17 @@ including Times New Roman and Arial.  Use the Font Helper in Keyman Desktop to f
 <p>This keyboard complies with Unicode 5.1</p>
 
 
-  <h2>Keyboard layout</h2>
+  <h2>Desktop layout</h2>
 	<h3>Default (unshifted)</h3>
 	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
 
+  <h2>Mobile layout</h2>
+	<h3>Default (unshifted)</h3>
+	<p><a href="LayoutMobileU_.png"><img class="keyboard" src="LayoutMobileU_.png" alt="Default (unshifted) state" /></a></p>
+	<h3>Shift</h3>
+	<p><a href="LayoutMobileU_S.png"><img class="keyboard" src="LayoutMobileU_S.png.png" alt="Shift state" /></a></p>
 
 
 <div id='Quickstart'>
@@ -101,6 +106,8 @@ combinations:</P>
 <tr><td><span class='keys'>S</span></td><td><span class='lang2'>ת</span></td><td class='note'>sof</td></tr>
 <tr><td><span class='keys'>T</span></td><td><span class='lang2'>תּ</span></td><td class='note'>tof</td></tr>
 <tr><td><span class='keys'>W</span></td><td><span class='lang2'>שׂ</span></td><td class='note'>sin</td></tr>
+<tr><td><span class='keys'>rR</span></td><td><span class='lang2'>רּ</span></td><td class='note'>melupm vov</td></tr>
+<tr><td><span class='keys'>kR</span></td><td><span class='lang2'>קּ</span></td><td class='note'></td></tr>
 </table>
 
 <p><EM>Geresh</EM> is typed with <span class='keys'>[SHIFT]+[G]</span> and <EM>curly 
