--- a/release/f/foochow/source/readme.htm
+++ b/release/f/foochow/source/readme.htm
@@ -18,8 +18,7 @@
     foochow for east-hokkienese hók-ciŭ-uâ.福州話閩東語羅馬字輸入法
 </p>
 <p> e-mail: goetiansoc@proton.me</p>
-<p> telegram: https://t.me/cathaylab</p>
-<p> instagram: cathay_lab2024</p>
+<p> telegram group: https://t.me/cathaylab</p>
 
 <p>© cathaylab</p>
 
