--- a/release/f/foochow/source/welcome.htm
+++ b/release/f/foochow/source/welcome.htm
@@ -18,7 +18,7 @@
 </p>
 <p> specific letters特殊字母: aa > a̤, oo > o̤, uu > ṳ,ee > e̤, euu > e̤ṳ, enge > e̤ng,ungu > ṳng, eung > e̤ṳng, aeng > ae̤ng </p>
 <p>
-tones音調: as > á, af > à, aw > ă, ar > ā, aj > â
+tones音調: as > á, af > à, aw > ă, ar > ā, aj > â, ahj > ăh
 </P>
 <!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
 
