ready for review

--- a/release/t/taichow/source/readme.htm
+++ b/release/t/taichow/source/readme.htm
@@ -18,9 +18,10 @@
   taichow keyboard for romanized goetian Ng-Yüih-Nyü
 </p>
 <p>
-台州話寧波話蘇州話吳越語羅馬字輸入法
+台州蘇州寧波吳越語羅馬字輸入法
 </p>
-<p>Copyright ©</p>
-
+<p>© cathaylab</p>
+<p> e-mail: goetiansoc@proton.me</p>
+<p> telegram: https://t.me/cathaylab</p>
 </body>
 </html>
