--- a/release/t/taichow/source/welcome.htm
+++ b/release/t/taichow/source/welcome.htm
@@ -11,24 +11,32 @@
 </head>
 <body>
 
-<h1>Start Using taichow開始使用台州話寧波話蘇州話吳越語羅馬字輸入法</h1>
+<h1>Start Using taichow開始使用台州蘇州寧波吳越語羅馬字輸入法</h1>
 
 <p>
-    taichow keyboard for romanized goetian T'e-ciu-'wa Ng-Yüih-Nyü
+    taichow keyboard for romanized goetian Ng-Yüih-Nyü
 </p>
 <p>
-    台州話寧波話蘇州話吳越語羅馬字輸入法
+    台州蘇州寧波吳越語羅馬字輸入法
 </p>
-<p> typing specific letters by doubletapping and combination 雙擊和字母組合輸入特殊字母</p>
+<p> typing specific letters by doubletapping and combination 雙擊咾字母組合輸入特殊字母</p>
 <p> examples: oo > ô, oe > ö, uu > ü, ae > æ, aw > ă, aa > ă, uw > ŭ </p>
-<p> adding aspiration marks "‛" by adding h after consonants 在輔音後輸入h字母，添加送氣音符號"‛"</p>
+<p> adding aspiration marks "‛" by adding h after consonants 垃拉輔音後頭輸入h字母，添加送氣音符號"‛"</p>
 <p> examples: ph > p‛, th > t‛, kh > k‛, tsh > ts‛, ch > c‛, kwh > kw‛, hh > ‛, kyh > ky‛, kwh > kw‛, khy > ky‛, khw > kw‛， gh > ‛ </p>
-<p> Typing 'gh', to generating voiced sound h "‛", 輸入gh，產生濁音h "‛"</p>
+<p> Typing 'gh', to generate voiced sound h "‛", 輸入gh，產生濁音h "‛"</p>
 <p> examples: gh > ‛ </p>
-<p> typing rising and falling tone marks by adding "q" and "x" 通過添加字母q和x輸入上聲和去聲音調符號 </p>
+<p> Typing 'h' after 'l''m''n', to generate voiced sound 'l̆''m̆''ň', 垃拉輔音lmn後頭輸入h，產生濁音"l̆""m̆""ň"</p>
+<p> examples: lh > l̆, mh > m̆, nh > n̆ </p>
+<p> Typing 'w' twice, to generate un-voiced sound 'w̆', 雙擊w，產生清音"w̆"</p>
+<p> examples: ww > w̆ </p>
+<p> typing rising and falling tone marks by adding "r" "q" and "x" 通過添加字母r、q咾x輸入上聲咾去聲音調符號 </p>
 <p> examples: aq > á, ax > à. </p>
+<p> automatically generate ông and w̆ by typing in Wu association romanization 使用吳語協會拼音輸入方式，自動產生ông咾w̆ </p>
+<p> examples: aon > ông, ua > w̆a. </p>
+<p> automatically predict “yi” combinatiön 自動預知“yi”搭配 </p>
+<p> examples: ki > kyi, ni > nyi, ya > yia. </p>
 <p> cancelling letter tranformation and tone marks by typing the tranformation key again</p>
-<p> 再次點擊轉化鍵，取消字母轉化和音調符號 </p>
+<p> 再撳一記轉化鍵，取消字母轉化咾音調符號 </p>
 <p> examples: aqq > aq, axx > ax, ooo > oo. </p>
 <!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
 <h1>phonology of taichownese台州話音韻表</h1>
@@ -43,14 +51,14 @@
 <p>
 <img src='vowel3.png' alt='phonology'>
 </p>
-
+<p><b>Ningbo Romanization Dictionary寧波羅馬字字典</b></p>
+<p> https://github.com/ionkaon/rime-old-nyingpo/blob/master/old_nyingpo.dict.yaml </p>
 <h1>Keyboard Layout</h1>
 
 <p><b>Unshifted</b></p>
 <img src='uchauU_.png' alt='Keyboard Layout'>
 <p><b>Shifted</b></p>
 <img src='uchauU_S.png' alt='Keyboard Layout'>
-
 
 
 
