Swapped November back to Noto Heiltsuk, updated/improved warning in welcome and read me

--- a/release/fv/fv_hailzaqvla/source/welcome.htm
+++ b/release/fv/fv_hailzaqvla/source/welcome.htm
@@ -25,8 +25,8 @@
 <h1>Start Using the Haíɫzaqvḷa Keyboard</h1>
 
 <p>This keyboard is designed for the Haíɫzaqvḷa language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
-<h2><b>NOTE:</b> This version of the keyboard contains Unicode characters that have not yet released and some characters may not work as intended in emails, social media, or texts until the new characters gain wider support.<h2>
-<p>This keyboard has been packaged with November Heiltsuk, which will display the new characters as intended. The November Heiltsuk font will be installed automatically alongside the keyboard - no further action needs to be taken.</p>
+<h2><b>NOTE:</b> This version of the keyboard contains Unicode characters that have not yet been released and some characters may not work as intended in emails, social media, or texts until the new characters gain wider support.<h2>
+<p>This keyboard has been packaged with Noto Sans Heiltsuk, which will display the new characters as intended. The Noto Sans Heiltsuk font will be installed automatically alongside the keyboard - no further action needs to be taken.</p>
 <p>Please use this font when typing Haíɫzaqvḷa as it has been specially built to represent the language and its new characters as accurately as possible.</p>
 
 
