--- a/release/fv/fv_hailzaqvla/source/readme.htm
+++ b/release/fv/fv_hailzaqvla/source/readme.htm
@@ -9,9 +9,9 @@
 <h1>Haíɫzaqvḷa Keyboard</h1>
 
 <p>This keyboard is designed for the Háiɫzaqvḷa language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
-<h2><b>NOTE:</b> This version of the keyboard is designed to work with Noto Heiltsuk, and contains unreleased unicode characters.</h2>
-<h2>This keyboard will <b>NOT</b> work as intended on computers that do not have Noto Heiltsuk installed and is not advised for use on social media, texting, or emailing.</h2>
-<p>The Noto Heiltsuk font will be installed automatically alongside the keyboard - no further action needs to be taken.</p>
+<h2><b>NOTE:</b> This version of the keyboard contains Unicode characters that have not yet been released and some characters may not work as intended in emails, social media, or texts until the new characters gain wider support.<h2>
+  <p>This keyboard has been packaged with Noto Sans Heiltsuk, which will display the new characters as intended. The Noto Sans Heiltsuk font will be installed automatically alongside the desktop keyboard - no further action needs to be taken.</p>
+  <p>This font will not override the default font on mobile devices, in apps, or on any webpages.</p>
 
 </body>
 </html>
