--- a/release/b/burushaski_girminas_perso_arabic/source/welcome/welcome.htm
+++ b/release/b/burushaski_girminas_perso_arabic/source/welcome/welcome.htm
@@ -42,6 +42,6 @@
           href="https://github.com/quwatsunny/fonts/archive/refs/heads/main.zip">Burushaski
           Quwatz Nastaliq</a> </span><span lang="en-CA"> </span><span lang="hi-IN">کا
         استعمال کریں۔ </span> </p>
-    <p align="right"><span style="color: #191f19;">© 2024 Quwat K. Sunny</span></p>
+    <p align="right"><span style="color: #191f19;">Copyright © Quwat K. Sunny</span></p>
   </body>
 </html>
