teochew keyboard updating
ready for review

--- a/release/t/teochew/source/readme.htm
+++ b/release/t/teochew/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>teochew</h1>
 
 <p>
-    teochew for Teochow language, Tiê-chiu Pe̍h-ūe-jī.
+    teochew keyboard for Teochewnese Tiê-chiu Pe̍h-ūe-jī
 </p>
 <p> e-mail: goetiansoc@proton.me</p>
 
