--- a/release/t/teochew/source/welcome.htm
+++ b/release/t/teochew/source/welcome.htm
@@ -16,9 +16,9 @@
 <p>
     teochew for Teochow language, Tiê-chiu Pe̍h-ūe-jī.
 <p>
-specific letters: uu = ṳ, nn = ⁿ
+specific letters: w = ṳ, nn = ⁿ
 <p>
-tones: as = á, af = à, aw = â, ax = ã, aj =ā, ahj = a̍h
+tones: as = á, af = à, ar = â, ax = ã, aj =ā, ahj = a̍h
 </P>
 <!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
 
