--- a/experimental/w/wenchow/source/welcome.htm
+++ b/experimental/w/wenchow/source/welcome.htm
@@ -17,7 +17,7 @@
     wenchow for üe-tsiu-‘ó.溫州話羅馬字
 </p>
 <p> typing specific letters by doubletapping and combination 雙擊和字母組合輸入特殊字母</p>
-<p> examples: oo > ö, uu > û, ii > ï, ae > æ, uw > ü, mm > m̌, nn > ň, ll > l̆, ňg > ngg </p>
+<p> examples: oo > ö, uu > û, ii > ï, ae > æ, aa > æ, uw > ü, mm > m̆, nn > n̆, ll > l̆, ngg > n̆g </p>
 <p> adding aspiration marks "‘" by adding h after consonants 在輔音後輸入h字母，添加送氣音符號"‘"</p>
 <p> examples: ph > p‘, th > t‘, kh > k‘, tsh > ts‘, chh > ch‘, kwh > kw‘, hh > ‘ </p>
 <p> doubletapping h, to generating voiced sound h "‘", 雙擊h，產生濁音h "‘"</p>
