[itrans] Address mobile layouts #2793

--- a/release/itrans/itrans_bengali/source/readme.htm
+++ b/release/itrans/itrans_bengali/source/readme.htm
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
     <title>Bengali Phonetic (ITRANS) Keyboard</title>
+    <style type="text/css">
+      p { font: 10pt Tahoma; }
+      h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+      h2 { font: bold 12pt Tahoma; color: #4444cc; }
+    </style>
   </head>
-  <body>
-    <style>body {background: #FFCC99;}a {text-decoration: none;}</style>
-  
-  <h3>
-    <font color="Chocolate">Bengali Phonetic (ITRANS)</font> Keyboard</h3>
+  <body>  
+  <h1>Bengali Phonetic (ITRANS) Keyboard</h1>
     <p>
         This is a phonetic keyboard for Bengali. It is uses the <strong><a href="https://www.aczoom.com/itrans/">ITRANS</a></strong> transliteration scheme by Avinash Chopde with some minor modifications for typing in English to get output in Unicode Bengali script.
         </p>
