--- a/release/itrans/itrans_bengali/source/welcome/welcome.htm
+++ b/release/itrans/itrans_bengali/source/welcome/welcome.htm
@@ -1,14 +1,13 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
+<head>
+  <meta charset="utf-8">
     <title>Bengali Phonetic (ITRANS)</title>
-    <style>
-html, body {
-font-family: &quot;Nirmala UI&quot;, &quot;Arial Unicode MS&quot;; 
-font-size: 100%;
-}
-a {text-decoration: none;}
+    <style type="text/css">
+      p { font: 10pt Tahoma; }
+      h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+      h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  a {text-decoration: none;}
 samp {
 font-family: &quot;Nirmala UI&quot;, &quot;Arial Unicode MS&quot;; 
 font-size: 120%;
@@ -74,8 +73,7 @@ text-align: right;
 </style>
   </head>
   <body>
-    <h2>Welcome!!!</h2>
-<h2><span style="color: chocolate;">Bengali Phonetic (ITRANS)</span> Keyboard Version 1.0.0</h2>
+<h1>Bengali Phonetic (ITRANS) Keyboard</h1>
 
 <p>This is a phonetic (ITRANS) keyboard layout for Bengali. It is based on 
 <strong><a href="https://www.aczoom.com/itrans/">ITRANS</a></strong> 
@@ -417,3 +415,5 @@ Consonant conjuncts are automatically formed, e.g. <kbd>k</kbd> <kbd>t</kbd> pro
 <tr> <td><kbd>=</kbd><kbd>=</kbd></td> <td><samp>ᳶ</samp></td> <td> VEDIC SIGN UPADHMANIYA</td></tr>
 </tbody>
 </table>
+</body>
+</html>
