--- a/release/itrans/itrans_devanagari_sanskrit_vedic/source/readme.htm
+++ b/release/itrans/itrans_devanagari_sanskrit_vedic/source/readme.htm
@@ -1,28 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
 <title>Vedic Sanskrit Devanagari Phonetic (ITRANS)</title>
 </head>
+    <style type="text/css">
+        p { font: 10pt Tahoma; }
+        h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+        h2 { font: bold 12pt Tahoma; color: #4444cc; }
+      </style>
 <body>
-<style>
-    body {
-    background: #FFCC99;
-    font-family: Siddhanta, serif;
-    font-size: 100%;
-    }
-    a {text-decoration: none;}
-    kbd {
-    color:black; 
-    font: 0.8em serif; 
-    border:solid 1px grey; 
-    background:#ccc; 
-    margin:1px 1px; 
-    padding:1px 2px; 
-    -webkit-border-radius: 2px; 
-    -moz-border-radius: 2px; 
-    border-radius: 2px; 
-    }
-</style>
-<h3> <font color=Chocolate>Vedic Sanskrit Devanagari Phonetic (ITRANS) </font>Keyboard</h3>
+   
+<h1>Vedic Sanskrit Devanagari Phonetic (ITRANS) Keyboard</h1>
 <p>This is a phonetic Devanagari keyboard layout with support for Vedic Sanskrit 
     (Devanagari Extended and Vedic Extensions Unicode ranges). 
     It is based on the <strong><a href="https://www.aczoom.com/itrans/">ITRANS</a></strong>
