--- a/release/itrans/itrans_gujarati/source/welcome/welcome.htm
+++ b/release/itrans/itrans_gujarati/source/welcome/welcome.htm
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Gujarati Phonetic (ITRANS)</title>
-    <style>
-html, body {
-font-family: &quot;Nirmala UI&quot;, &quot;Arial Unicode MS&quot;; 
-font-size: 100%;
-}
+    <style type="text/css">
+      p { font: 10pt Tahoma; }
+      h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+      h2 { font: bold 12pt Tahoma; color: #4444cc; }
 a {text-decoration: none;}
 samp {
 font-family: &quot;Nirmala UI&quot;, &quot;Arial Unicode MS&quot;; 
@@ -74,9 +73,7 @@ text-align: right;
 </style>
   </head>
   <body>
-    <h1>Welcome!!!</h1>
-<h2>
-<span style="color: chocolate;">Gujarati Phonetic (ITRANS)</span> Keyboard Version 1.2.0</h2>
+<h1>Gujarati Phonetic (ITRANS) Keyboard</h1>
 <p>This is a phonetic (ITRANS) keyboard layout for Gujarati and Avestan written in Gujarati script. It is based on 
 <strong><a href="https://www.aczoom.com/itrans/">ITRANS</a></strong> transliteration scheme 
 with some modifications. You can phonetically type using the modified ITRANS scheme on a 
@@ -430,3 +427,5 @@ Consonant conjuncts are automatically formed, e.g. <kbd>k</kbd> <kbd>t</kbd> pro
 <tr> <td><kbd>=</kbd><kbd>=</kbd></td> <td><samp>ᳶ</samp></td> <td> VEDIC SIGN UPADHMANIYA</td></tr>
 </tbody>
 </table>
+</body>
+</html>
