--- a/release/itrans/itrans_gurmukhi/source/readme.htm
+++ b/release/itrans/itrans_gurmukhi/source/readme.htm
@@ -4,9 +4,12 @@
     <title>Gurmukhi Phonetic (ITRANS)</title>
   </head>
   <body>
-    <style>body {background: #FFCC99;}a {text-decoration: none;}</style>
-    <h3>
-    <font color="Chocolate">Gurmukhi Phonetic (ITRANS)</font> Keyboard</h3>
+    <style type="text/css">
+      p { font: 10pt Tahoma; }
+      h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+      h2 { font: bold 12pt Tahoma; color: #4444cc; }
+    </style>
+      <h1>Gurmukhi Phonetic (ITRANS) Keyboard</h1>
     <p>
         This is a phonetic keyboard layout for Gurmukhi. It is based on the <strong><a href="https://www.aczoom.com/itrans/">ITRANS</a></strong> transliteration scheme by Avinash Chopde, with some minor modifications. This can be used for writing Punjabi and Sindhi languages. Examples: Type `hindI` for ਹਿਨ੍ਦੀ, `hiMdI` for ਹਿੰਦੀ,`gujarAtI` for ਗੁਜਰਾਤੀ, `paMjAbI` for ਪੰਜਾਬੀ.
         </p>
