--- a/release/itrans/itrans_gurmukhi/source/welcome/welcome.htm
+++ b/release/itrans/itrans_gurmukhi/source/welcome/welcome.htm
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Punjabi/Gurmukhi Phonetic (ITRANS)</title>
-    <style>
-html, body {
-font-size: 100%;
-}
+    <style type="text/css">
+      p { font: 10pt Tahoma; }
+      h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+      h2 { font: bold 12pt Tahoma; color: #4444cc; }
 a {text-decoration: none;}
 samp {
 font-size: 110%;
@@ -72,9 +72,7 @@ text-align: right;
 </style>
   </head>
   <body>
-    <h2>Welcome!</h2>
-<h2>
-<span style="color: chocolate;">Gurmukhi Phonetic (ITRANS)</span> Keyboard Version 1.0.0</h2>
+<h1>Gurmukhi Phonetic (ITRANS) Keyboard </h1>
 <p>This is a phonetic keyboard layout for Punjabi and Sindhi languages written in Gurmukhi script. It is based on 
 <strong><a href="https://www.aczoom.com/itrans/">ITRANS</a></strong> transliteration scheme 
 with some modifications. You can phonetically type using the modified ITRANS scheme on a 
@@ -395,3 +393,5 @@ various dependent vowel signs and consonantal diacritics.</p>
 </ul>
 <hr>
 
+</body>
+</html>
