--- a/release/itrans/itrans_odia/source/readme.htm
+++ b/release/itrans/itrans_odia/source/readme.htm
@@ -4,9 +4,12 @@
     <title>Odia/Oriya Phonetic (ITRANS)</title>
   </head>
   <body>
-    <style>body {background: #FFCC99;}a {text-decoration: none;}</style>
-    <h3>
-    <font color="Chocolate">Odia/Oriya Phonetic (ITRANS)</font> Keyboard</h3>
+    <style type="text/css">
+      p { font: 10pt Tahoma; }
+      h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+      h2 { font: bold 12pt Tahoma; color: #4444cc; }
+    </style>
+      <h1>Odia/Oriya Phonetic (ITRANS) Keyboard</h1>
     <p>
         This is a phonetic keyboard layout for Odia/Oriya. It is based on the <strong><a href="https://www.aczoom.com/itrans/">ITRANS</a></strong> transliteration scheme by Avinash Chopde, with some minor modifications.
         </p>
