--- a/release/itrans/itrans_odia/source/welcome/welcome.htm
+++ b/release/itrans/itrans_odia/source/welcome/welcome.htm
@@ -74,9 +74,7 @@ text-align: right;
 </style>
   </head>
   <body>
-    <h2>Welcome!</h2>
-<h2>
-<span style="color: chocolate;">Odia/Oriya Phonetic (ITRANS)</span> Keyboard Version 1.0.0</h2>
+<h1>Odia/Oriya Phonetic (ITRANS)</span> Keyboard</h1>
 <p>This is a phonetic (ITRANS) keyboard layout for languages written in Odia/Oriya script. The input scheme is based on 
 <strong><a href="https://www.aczoom.com/itrans/">ITRANS</a></strong> transliteration scheme 
 with some modifications. You can phonetically type using the modified ITRANS scheme on a 
