--- a/release/itrans/itrans_devanagari_sanskrit_vedic/source/welcome/welcome.htm
+++ b/release/itrans/itrans_devanagari_sanskrit_vedic/source/welcome/welcome.htm
@@ -1,13 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
+  <meta charset="utf-8">
 <title>Vedic Sanskrit Devanagari Phonetic (ITRANS)</title>
-<style>
-html, body {
-font-family: Siddhanta, sans-serif;
-font-size: 100%;
-}
+<style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
 samp {
 font-family: "FreeSerif", "Siddhanta"; 
 font-size: 120%;
@@ -73,9 +72,7 @@ text-align: right;
 </style>
 </head>
 <body>
-<h1>Welcome!!!</h1>
-
-<h3> <font color=Chocolate>Vedic Sanskrit Devanagari Phonetic (ITRANS) </font>Keyboard Version 1.2.1</h3>
+<h1>Vedic Sanskrit Devanagari Phonetic (ITRANS) Keyboard</h3>
 
 <p>This is a phonetic Devanagari keyboard layout with support for Vedic Sanskrit 
 (Devanagari Extended and Vedic Extensions Unicode ranges). 
@@ -596,4 +593,5 @@ It also has Tone marks and Breathing mark for Samaveda and Signs for Jaiminiya S
 
 <p><img src="itrans_devanagari_sanskrit_vedicU_RA.png" alt="AltGr (RAlt) state"/></p>
 </center>
-
+</body>
+</html>
